salti/src/ui/panes/snapshots/salti__ui__panes__sequence_id__tests__basic.snap
---
source: salti/src/ui/panes/sequence_id.rs
expression: "render_text(&session, &full_window(&session),\nAlignmentHeaderLayout::new(0))"
---
┌────────────────────────────┐
│                            │
│                            │
│1 seq1                      │
│2 seq2                      │
│3 seq3                      │
│                            │
└────────────────────────────┘
