salti/src/ui/panes/snapshots/salti__ui__panes__sequence_id__tests__feature_rows.snap
---
source: salti/src/ui/panes/sequence_id.rs
expression: "render_text(&session, &full_window(&session),\nAlignmentHeaderLayout::with_features(2))"
---
┌────────────────────────────┐
│                            │
│                            │
│                            │
│                            │
│1 seq1                      │
│2 seq2                      │
└────────────────────────────┘
