salti/src/ui/panes/snapshots/salti__ui__panes__sequence_id__tests__pinned.snap
---
source: salti/src/ui/panes/sequence_id.rs
expression: "render_text(&session, &full_window(&session),\nAlignmentHeaderLayout::new(0))"
---
┌────────────────────────────┐
│                            │
│Pinned sequences:           │
│2 seq2                      │
│4 seq4                      │
│────────────────────────────│
│1 seq1                      │
└────────────────────────────┘
