salti/src/ui/panes/snapshots/salti__ui__panes__sequence_id__tests__scrolled.snap
---
source: salti/src/ui/panes/sequence_id.rs
expression: "render_text(&session, &window, AlignmentHeaderLayout::without_features())"
---
┌────────────────────────────┐
│                            │
│                            │
│1 loooooooooooong-na        │
│2 loooooooooooong-na        │
│3 loooooooooooong-na        │
│                            │
└────────────────────────────┘
