salti/src/ui/panes/snapshots/salti__ui__panes__sequence_id__tests__sequence_id_pane_local_feature_rows.snap
---
source: salti/src/ui/panes/sequence_id.rs
assertion_line: 253
expression: "render_sequence_id_pane_text_with_header(&alignment, &window,\nAlignmentHeaderLayout::with_local_features(2),)"
---
┌────────────────────────────┐
│                            │
│                            │
│                            │
│                            │
│1 seq1                      │
│2 seq2                      │
└────────────────────────────┘
