salti/src/ui/panes/snapshots/salti__ui__panes__sequence_id__tests__sequence_id_pane_name_scroll.snap
---
source: salti/src/ui/panes/sequence_id.rs
expression: "render_sequence_id_pane_text(&alignment, &window)"
---
┌────────────────────────────┐
│                            │
│                            │
│1 loooooooooooong-na        │
│2 loooooooooooong-na        │
│3 loooooooooooong-na        │
│                            │
└────────────────────────────┘
