salti/src/ui/panes/snapshots/salti__ui__panes__sequence_id__tests__sequence_id_pane_pinned.snap
---
source: salti/src/ui/panes/sequence_id.rs
expression: "render_sequence_id_pane_text(&alignment, &window)"
---
┌────────────────────────────┐
│                            │
│Pinned sequences:           │
│2 seq2                      │
│4 seq4                      │
│────────────────────────────│
│1 seq1                      │
└────────────────────────────┘
